<resources>
    <string name="app_name">Android For Beginner</string>
    <string name="title">Android Application Development</string>
    <string name="content">- Tutorial \n - Quiz \n - Examples</string>
    <string name="footer">A Guide for Android Programming</string>
    <string name="android">Android</string>
    <string name="rateUs">Rate Us</string>
    <string name="donate">Donate</string>
    <string name="feedback">Feedback</string>
    <string name="moretutorials">More Tutorials</string>
    <string name="gmail">congminh281297@gmail.com</string>
    <string name="introduction">Android \nIntroduction</string>
    <string name="structure">Android \nProject Structure</string>
    <string name="layouts">Android \nLayouts</string>
    <string name="ui">Android \nUI Widgets</string>
    <string name="activities_fragments">Activities &amp; \nFragments</string>
    <string name="services">Android \nServices</string>
    <string name="menu">Android \nMenu</string>
    <string name="containers">Android \nContainers</string>
    <string name="datastorage">Android \nDataStorage</string>
    <string name="sqlite">Android \nSQLite</string>
    <string name="mysql_php">Android \nMySQL &amp; PHP</string>
    <string name="thread_process">Android \nThreads &amp; Process</string>
    <string name="notification">Android \nNotifications</string>
    <string name="xml_json">XML And JSON \nParsing</string>
    <string name="history">Android History and Versions</string>
    <string name="symbols"><u>Android Version Symbols</u></string>
    <string name="why"><u>Why Android?</u></string>
    <string name="software_stack">Android Software Stack</string>
    <string name="virtual">Dalvik Virtual Machine</string>
    <string name="art_dalvik">ART vs Dalvik</string>
    <string name="android_components">Android Application Components</string>
    <string name="setup">Android Environment Setup</string>
    <string name="option">How to Activate Developers Option</string>
    <string name="build_app">Building Your First App</string>
    <string name="introduction_content">Android is a <b>software stack</b> for mobile devices that includes an <b>operating system</b>,
        <b>middleware</b> and <b>key applications</b>. The Android SDK provides the tools and APIs necessary to develop applications on the Android platform using the Java programming language.
    </string>
    <string name="module">Android App Module</string>
    <string name="manifest">Android Manifest.xml</string>
    <string name="java">Android Java</string>
    <string name="res">Android Res</string>
    <string name="strings">Android Strings.xml</string>
    <string name="styles">Android Styles.xml</string>
    <string name="view">What are views? What is a Viewgroup?</string>
    <string name="introduction_layout">Introduction about Layouts and its Types</string>
    <string name="linear">Linear Layout</string>
    <string name="relative">Relative Layout</string>
    <string name="table">Table Layout</string>
    <string name="frame">Frame Layout</string>
    <string name="ui_introduction">Android UI Widgets Introduction</string>
    <string name="button">Button</string>
    <string name="edittext">EditText</string>
    <string name="image_button">Image Button</string>
    <string name="toggle_button">Toggle Button</string>
    <string name="radio">Radio Button</string>
    <string name="checkbox">CheckBox</string>
    <string name="spinner">Spinners</string>
    <string name="rating">RatingBar</string>
    <string name="progress">ProgressBar</string>
    <string name="datepicker">DatePicker</string>
    <string name="timepicker">TimePicker</string>
    <string name="toast">Toast</string>
    <string name="autocomplete">AutoCompleteTextView</string>
    <string name="alert">AlertDialog</string>
    <string name="lifecycle">Activity Lifecycle</string>
    <string name="intent">What is an Intent</string>
    <string name="intent_resolution">Intent Resolution</string>
    <string name="frag_java">Fragments in Java</string>
    <string name="frag_xml">Fragments in XML</string>
    <string name="inter_fragment">InterFragment Communication</string>
    <string name="menu_item">Menu</string>
    <string name="option_menu">Option Menu</string>
    <string name="context_menu">Context Menu</string>
    <string name="popup_menu">PopUp Menu</string>
    <string name="listview">ListView</string>
    <string name="custom_lv">Custom ListView</string>
    <string name="gridview">GridView</string>
    <string name="webview">WebView</string>
    <string name="searchview">SearchView</string>
    <string name="datastorage_child">DataStorage</string>
    <string name="shared_preference">SharedPreference</string>
    <string name="internal">Internal Storage</string>
    <string name="external">External Storage</string>
    <string name="cache">Cache Storage</string>
    <string name="sqlite_child">SQLite</string>
    <string name="database_table">SQLite Create Database And Table</string>
    <string name="insert">SQLite Insert</string>
    <string name="read">SQLite Read</string>
    <string name="update">SQLite Update</string>
    <string name="delete">SQLite Delete</string>
    <string name="intro">MySQL Intro</string>
    <string name="login">MySQL Login</string>
    <string name="register">MySQL Register</string>
    <string name="widget">Android Widgets</string>
    <string name="image_media">Android Image And Media</string>
    <string name="date_time">Android Date Time</string>
    <string name="implicit">Android Implicit Intent</string>
    <string name="explicit">Android Explicit Intent</string>
    <string name="container">Android Containers</string>
    <string name="telephony">Android Telophony Manager</string>
    <string name="wifi">Android Wifi Manager</string>
    <string name="animation">Android Tween Animations</string>
    <string name="material">Material Design</string>


</resources>
